--- a/spring-05-Core-Abstraction/pom.xml
+++ b/spring-05-Core-Abstraction/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.cydeo</groupId>
-    <artifactId>spring-00-Coupling</artifactId>
+    <artifactId>spring-05-Core-Abstraction</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,9 +14,17 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.22</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+
     </dependencies>
+
+
 </project>
