--- a/spring-13-Data-CinemaLab/src/main/resources/application.properties
+++ b/spring-13-Data-CinemaLab/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
 
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-on-migrate=true
 
-#spring.flyway.enabled=false
+spring.flyway.enabled=false
 
 
