--- a/spring-13-Data-CinemaLab/src/main/resources/application.properties
+++ b/spring-13-Data-CinemaLab/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
 
-#spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-on-migrate=true
 
 spring.flyway.enabled=false
 
